Add some iterable composition tools

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "from torch import nn, optim\n",
     "from torchvision import datasets, transforms, models\n",
     "from torch.utils.data import DataLoader\n",
-    "from itertools import chain, islice\n",
+    "# from itertools import chain, islice\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import json"
@@ -352,7 +352,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import chain, zip_longest, tee, islice\n",
+    "from functools import partial\n",
+    "\n",
+    "\n",
+    "class LastItem(object):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def kwurry(fn):\n",
+    "    kwurried = lambda *args, **kwargs: fn(*args, **kwargs) if len(args) else kwurried\n",
+    "\n",
+    "\n",
+    "last = LastItem()\n",
+    "flatten = itt.chain.from_iterable\n",
+    "zip_min = lambda it: zip(*list(iter(it)))\n",
+    "zip_max = lambda it, fill=None: zip_longest(*list(iter(it)), fillvalue=fill)\n",
+    "copy = lambda it, n=2: itt.tee(it, n)\n",
+    "\n",
+    "def map_it(it, fna=lambda i: i):\n",
+    "    it = iter(it)\n",
+    "    fna = fna if len(fna) else (fna,)\n",
+    "    for fn, i in zip(fna, it):\n",
+    "        yield fn(i)\n",
+    "    for i in it:\n",
+    "        yield fn(i)\n",
+    "\n",
+    "def compose(*fns):\n",
+    "    def composed(it):\n",
+    "        for fn in fns:\n",
+    "            it = fn(it)\n",
+    "        return it\n",
+    "    return composed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -370,10 +410,17 @@
     "    def __init__(self, inputs, outputs, hidden=[], dropout=0.2):\n",
     "        super().__init__()\n",
     "        \n",
-    "        layers = zip(\n",
-    "            chain((inputs,), hidden, (outputs,)), \n",
-    "            islice(\n",
-    "                chain((inputs,), hidden, (outputs,)), 1, None))\n",
+    "#         layers = zip(\n",
+    "#             chain((inputs,), hidden, (outputs,)), \n",
+    "#             islice(\n",
+    "#                 chain((inputs,), hidden, (outputs,)), 1, None))\n",
+    "        c = compose(\n",
+    "            flatten,\n",
+    "            copy,\n",
+    "            partial(map_it, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
+    "#             lambda it: map_it(it, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
+    "            zip_min)\n",
+    "        layers = c(((inputs,), hidden, (outputs,)))\n",
     "        \n",
     "        print(list(layers))\n",
     "        \n",
