Rename some iter composable fns

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,11 +370,11 @@
     "\n",
     "last = LastItem()\n",
     "flatten = itt.chain.from_iterable\n",
-    "zip_min = lambda it: zip(*list(iter(it)))\n",
-    "zip_max = lambda it, fill=None: zip_longest(*list(iter(it)), fillvalue=fill)\n",
+    "join = lambda it: zip(*list(iter(it)))\n",
+    "join_max = lambda it, fill=None: zip_longest(*list(iter(it)), fillvalue=fill)\n",
     "copy = lambda it, n=2: itt.tee(it, n)\n",
     "\n",
-    "def map_it(it, fna=lambda i: i):\n",
+    "def each(it, fna=lambda i: i):\n",
     "    it = iter(it)\n",
     "    fna = fna if len(fna) else (fna,)\n",
     "    for fn, i in zip(fna, it):\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -417,9 +417,9 @@
     "        c = compose(\n",
     "            flatten,\n",
     "            copy,\n",
-    "            partial(map_it, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
-    "#             lambda it: map_it(it, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
-    "            zip_min)\n",
+    "            partial(each, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
+    "#             lambda it: each(it, fna=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
+    "            join)\n",
     "        layers = c(((inputs,), hidden, (outputs,)))\n",
     "        \n",
     "        print(list(layers))\n",
