--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -328,13 +328,13 @@
       ")\n",
       "ModuleList(\n",
       "  (0): Linear(in_features=9216, out_features=6937, bias=True)\n",
-      "  (1): ReLU(inplace)\n",
+      "  (1): ReLU()\n",
       "  (2): Dropout(p=0.5)\n",
       "  (3): Linear(in_features=6937, out_features=4659, bias=True)\n",
-      "  (4): ReLU(inplace)\n",
+      "  (4): ReLU()\n",
       "  (5): Dropout(p=0.5)\n",
       "  (6): Linear(in_features=4659, out_features=2380, bias=True)\n",
-      "  (7): ReLU(inplace)\n",
+      "  (7): ReLU()\n",
       "  (8): Dropout(p=0.5)\n",
       "  (9): Linear(in_features=2380, out_features=102, bias=True)\n",
       "  (10): LogSoftmax()\n",
@@ -416,6 +416,23 @@
     "# class_net = Classify(1000, 102, [512, 256])\n",
     "# ident_net = Identify('alexnet')\n",
     "# classifier, fc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trainer\n",
+    "\n",
+    "class Optimize(nn.Module):\n",
+    "    def __init__(self, optimizer, criterion):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "\n",
+    "def train(model, optimizer, epochs=100, lr=0.2):\n",
+    "    "
    ]
   },
   {
