--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -364,7 +364,8 @@
     "    \n",
     "    def forward(self, x):\n",
     "        for f in self.layers:\n",
-    "            f(x)\n",
+    "            x = f(x)\n",
+    "        return x\n",
     "\n",
     "\n",
     "class Identify(nn.Module):\n",
