--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -379,9 +379,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AlexNet(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+      "    (1): ReLU(inplace)\n",
+      "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "    (4): ReLU(inplace)\n",
+      "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): ReLU(inplace)\n",
+      "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (9): ReLU(inplace)\n",
+      "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace)\n",
+      "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Dropout(p=0.5)\n",
+      "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
+      "    (2): ReLU(inplace)\n",
+      "    (3): Dropout(p=0.5)\n",
+      "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (5): ReLU(inplace)\n",
+      "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+      "  )\n",
+      ") 9216\n",
+      "Classify(\n",
+      "  (layers): ModuleList(\n",
+      "    (0): Dropout(p=0.2)\n",
+      "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
+      "    (2): ReLU()\n",
+      "    (3): Dropout(p=0.2)\n",
+      "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (5): ReLU()\n",
+      "    (6): Dropout(p=0.2)\n",
+      "    (7): Linear(in_features=4096, out_features=102, bias=True)\n",
+      "    (8): LogSoftmax()\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build and train your network\n",
     "\n",
@@ -393,9 +439,9 @@
     "            copy,\n",
     "            each.partial(fn=[lambda i: i, lambda i: islice(i, 1, None)]),\n",
     "            join,\n",
-    "            each.partial(fn=(lambda io: (nn.Linear(*io), nn.ReLU(), nn.Dropout(dropout)),)),\n",
+    "            each.partial(fn=(lambda io: (nn.Dropout(dropout), nn.Linear(*io), nn.ReLU()),)),\n",
     "            flatten)\n",
-    "        layers = list(c(((inputs,), hidden, (outputs,))))[:-2]\n",
+    "        layers = list(c(((inputs,), hidden, (outputs,))))[:-1]\n",
     "        layers = nn.ModuleList([*layers, nn.LogSoftmax(dim=1)])\n",
     "        self.layers = layers\n",
     "    \n",
@@ -430,6 +476,7 @@
     "                except AttributeError as ex:\n",
     "                    pass\n",
     "        \n",
+    "        print(cnn, fc_inputs)\n",
     "        hidden = auto_layers(fc_inputs, outputs, n_hidden) if n_hidden else hidden\n",
     "        classifier = Classify(fc_inputs, outputs, hidden, dropout)\n",
     "        setattr(cnn, fc_key, classifier)\n",
@@ -437,6 +484,7 @@
     "        self.classifier = classifier\n",
     "        \n",
     "        classifier.apply(init_weights)\n",
+    "        print(classifier)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = self.cnn.forward(x)\n",
@@ -454,7 +502,7 @@
     "\n",
     "\n",
     "\n",
-    "# model = Identify('resnet18', 102, [4096], class_to_idx=image_datasets['train'].class_to_idx)\n",
+    "model = Identify('alexnet', 102, [4096, 4096], class_to_idx=image_datasets['train'].class_to_idx)\n",
     "# model\n"
    ]
   },
